navigation and examples added

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,21 +7,36 @@
 html,
 body {
   overflow: hidden;
+  background-image: linear-gradient(#140331, #f0f0f0);
 }
 
-.video {
-  box-sizing: border-box;
+p {
+  color: #fff;
+}
+p.examples {
+  text-align: center;
+}
+a {
+  text-decoration: none;
+  color: #fff;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
-body {
-  // cursor: url('../../public/ellipse.png'), pointer;
+// .video {
+//   box-sizing: border-box;
+// }
 
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-  font-size: 16px;
-  color: #f1f1f1;
+// body {
+//   // cursor: url('../../public/ellipse.png'), pointer;
 
-  overscroll-behavior: none;
-}
+//   font-family: 'Helvetica Neue', Arial, sans-serif;
+//   font-size: 16px;
+//   color: #f1f1f1;
+
+//   overscroll-behavior: none;
+// }
 
 #webgl {
   width: 100vw;
@@ -29,78 +44,120 @@ body {
 }
 
 
-canvas {
-  display: block;
-}
+// canvas {
+//   display: block;
+// }
 
-.video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  pointer-events: none;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+// .video {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   z-index: 1000;
+//   pointer-events: none;
+//   left: 50%;
+//   top: 50%;
+//   transform: translate(-50%, -50%);
 
-  width: 40vh;
-  height: 68.5vh;
-}
-.video video {
-  width: 100%;
-  opacity: 0;
-}
+//   width: 40vh;
+//   height: 68.5vh;
+// }
+// .video video {
+//   width: 100%;
+//   opacity: 0;
+// }
 
-.video2 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  pointer-events: none;
-  opacity: 0;
-  border: 3px solid #fff;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+// .video2 {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   z-index: 1000;
+//   pointer-events: none;
+//   opacity: 0;
+//   border: 3px solid #fff;
+//   left: 50%;
+//   top: 50%;
+//   transform: translate(-50%, -50%);
 
-  width: 40vh;
-  height: 68.5vh;
-}
-.video2 video {
-  width: 100%;
-}
+//   width: 40vh;
+//   height: 68.5vh;
+// }
+// .video2 video {
+//   width: 100%;
+// }
+
+// .menu {
+//   position: absolute;
+//   // display: ;
+//   bottom: 15px;
+//   left: 0;
+//   right: 0;
+//   height: 68px;
+//   background-color: rgba(32, 34, 133, 0.2);
+
+//   border-radius: 4px;
+//   box-shadow: 1px 1px 15px #202285;
+
+// }
+// .menu .list-items {
+//   list-style: none;
+
+//   display: flex;
+//   flex-direction: row;
+//   align-items: center;
+//   justify-content: center;
+// }
+// .menu .list-items li {
+//   padding: 24px;
+//   margin-bottom: 20px;
+// }
+// .menu .list-items li a {
+//   text-decoration: none;
+
+//   color: #f1f1f1;
+//   font-size: 18px;
+// }
+// .menu .list-items li a:hover {
+//   text-decoration: underline;
+// }
+
+// NOVO
 
 .menu {
-  position: absolute;
-  // display: ;
-  bottom: 15px;
-  left: 0;
-  right: 0;
-  height: 68px;
-  background-color: rgba(32, 34, 133, 0.2);
-
-  border-radius: 4px;
-  box-shadow: 1px 1px 15px #202285;
-
-}
-.menu .list-items {
-  list-style: none;
-
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: center;
-}
-.menu .list-items li {
-  padding: 24px;
-  margin-bottom: 20px;
-}
-.menu .list-items li a {
-  text-decoration: none;
 
-  color: #f1f1f1;
-  font-size: 18px;
-}
-.menu .list-items li a:hover {
-  text-decoration: underline;
+  nav {
+    ul.list-items {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      li {
+        margin-right: 10px;
+        button {
+          border: none;
+          background: transparent;
+          padding: 10px 20px;
+          font-size: 16px;
+          cursor: pointer;
+          &.link-01 {
+            color: #ff0000; // vermelho
+          }
+          &.link-02 {
+            color: #0000ff; // azul
+          }
+          &.link-03 {
+            color: #00ff00; // azul
+          }
+          &.link-04 {
+            color: #333; // cinza
+          }
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+  }
 }
